# table-project

./: .gitignore  CMakeLists.txt  Doxyfile  README.md
src/: FloatingType.cpp  FloatingType.h  FloatingType.test.cpp  IntegerType.cpp  IntegerType.h  Type.cpp  Type.h  doctest.h  main.cpp
src/celltypes/: DoubleType.cpp  DoubleType.h  IntegerType.cpp  IntegerType.h  StringType.cpp  StringType.h
src/exception/: NoSuchElementError.h  ParseError.h
src/table/: Table.cpp  Table.h
src/tabletypes/: DoubleType.cpp  DoubleType.h  FormulaType.cpp  FormulaType.h  IntegerType.cpp  IntegerType.h  StringType.cpp  StringType.h
table-project/: Application.cpp  Application.h  TableProject.h  main.cpp
table-project-tests/: doctest.h  test-main.cpp
table-project-tests/math/: Operators.test.cpp  Parser.test.cpp
table-project-tests/table/: Table.test.cpp
table-project-tests/tabletypes/: DoubleType.test.cpp  FormulaType.test.cpp  IntegerType.test.cpp  StringType.test.cpp  Type.test.cpp
table-project-tests/util/: DoubleUtil.test.cpp  StringUtil.test.cpp  VectorUtil.test.cpp
table-project/exception/: NoSuchElementError.h  ParseError.h
table-project/math/: Operators.cpp  Operators.h  Parser.h
table-project/table/: Table.cpp  Table.h
table-project/tabletypes/: DoubleType.cpp  DoubleType.h  FormulaType.cpp  FormulaType.h  IntegerType.cpp  IntegerType.h  StringType.cpp  StringType.h  Type.cpp  Type.h
table-project/util/: DoubleUtil.h  FileUtil.h  StringUtil.h  VectorUtil.h
test/: DoubleType.test.cpp  IntegerType.test.cpp  StringType.test.cpp  Table.test.cpp
tests/: doctest.h  test-main.cpp
(+13 files in other folders)
